# Fast-Quadric-Mesh-Simplification

./: README.md
src.cmd/: CMakeLists.txt  Makefile  Simplify.h
